--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "del": "^6.0.0",
     "gulp": "^4.0.2",
     "gulp-babel": "^8.0.0",
+    "gulp-cache-bust": "^1.4.1",
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-cssbeautify": "^3.0.0",
