--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -25,10 +25,14 @@ jobs:
       - name: Install dependencies
         run: npm install
 
-      - name: Debug Gulp Build
-        run: |
-          npx gulp build
-          ls -l   # List files and directories in the current directory for debugging purposes
+      - name: Build with Gulp
+        run: npx gulp
+
+      - name: Archive dist folder
+        uses: actions/upload-artifact@v3
+        with:
+          name: dist
+          path: dist
 
   deploy:
     runs-on: ubuntu-latest
@@ -36,6 +40,11 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Download dist folder from build job
+        uses: actions/download-artifact@v3
+        with:
+          name: dist
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
