--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -45,6 +45,11 @@ jobs:
         uses: actions/download-artifact@v3
         with:
           name: dist
+          path: .
+
+      - name: Display structure of downloaded files
+        run: ls -R
+        working-directory: .
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
