--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -28,11 +28,8 @@ jobs:
       - name: Build with Gulp
         run: npx gulp
 
-      - name: Archive dist folder
-        uses: actions/upload-artifact@v3
-        with:
-          name: dist
-          path: dist
+      - name: Move dist folder to the root
+        run: mv dist $GITHUB_WORKSPACE/dist
 
   deploy:
     runs-on: ubuntu-latest
@@ -40,16 +37,6 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
-
-      - name: Download dist folder from build job
-        uses: actions/download-artifact@v3
-        with:
-          name: dist
-          path: .
-
-      - name: Display structure of downloaded files
-        run: ls -R
-        working-directory: .
 
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
