--- a/.github/workflows/npm-gulp.yml
+++ b/.github/workflows/npm-gulp.yml
@@ -38,6 +38,9 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
+      - name: List current working directory
+        run: ls -l
+
       - name: Deploy to GitHub Pages
         uses: peaceiris/actions-gh-pages@v3
         with:
